# desloppify

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DATA_DICTIONARY.md  GENESIS_BRAND.md  README.md  RESTART.md  RUST_SPECIFICATION.md  SKILL.md  SPECIFICATION.md  TEST_HARNESS.md  pyproject.toml
.github/workflows/: python-publish.yml
contrib/csharp/: README.md
desloppify/: README.md  STRUCTURE.md  badge.py  cli.py  config.py  conftest.py  file_discovery.py  hook_registry.py  issues.py  narrative.py  plan.py  registry.py  scorecard.py  scoring.py  state.py  utils.py  visualize.py  zones.py
desloppify/commands/: _helpers.py  config_cmd.py  detect.py  fix_cmd.py  issues_cmd.py  move.py  next.py  plan_cmd.py  resolve.py  review_cmd.py  scan.py  show.py  status.py  zone_cmd.py
desloppify/core/: __init__.py  config.py  discovery_api.py  enums.py  fallbacks.py  file_paths.py  grep.py  issues_render.py  output_api.py  paths_api.py  query.py  query_paths.py  registry.py  registry_order.py  runtime_state.py  skill_docs.py  source_discovery.py  tooling.py
desloppify/detectors/: naming.py  (+3 more)
docs/: CLAUDE.md  CODEX.md  COPILOT.md  CURSOR.md  DEVELOPMENT_PHILOSOPHY.md  GEMINI.md  SKILL.md  WINDSURF.md
scripts/: checks.sh  cli_smoke_check.sh  cli_smoke_snapshot.sh
tests/: test_cli.py  test_cmd_detect.py  test_cmd_dev.py  test_cmd_explain.py  test_cmd_fix.py  test_cmd_fix_review.py  test_cmd_next.py  test_cmd_plan.py  test_cmd_resolve.py  test_cmd_scan.py  test_cmd_show.py  test_cmd_status.py  test_cmd_zone.py  test_commands_base.py  test_complexity.py  test_config.py  test_coupling.py  test_csharp_deps.py  test_csharp_scan.py  test_csharp_security.py  test_direct_coverage_modules.py  test_dupes.py  test_flat_dirs.py  test_gods.py  test_graph.py  test_holistic_review.py  test_issues.py  test_lang_base.py  test_lang_standardization.py  test_lang_test_layout.py  test_large.py  test_naming.py  test_narrative.py  test_narrative_submodules.py  test_orphaned.py  test_plan.py  test_review.py  test_review_context.py  test_review_coverage.py  test_review_split.py  (+12 more)
(+655 files in other folders)
